siir allah ylqiha lik a lumbok hhhhh